fixed gap between about columns

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,6 @@ section {
     gap: 2rem;
     padding-left: 4vw;
     padding-right: 4vw;
-    border: 2px solid red;
 }
 
 .materials-img {
@@ -145,7 +144,6 @@ section {
 .materials-txt {
     flex: 1 1 300px;
     font-size: clamp(1rem, 2vw, 1.5rem);
-    border: 2px solid blue;
 }
 
 @media (max-width: 500px) {
@@ -171,9 +169,9 @@ section {
     padding-left: 4vw;
     padding-right: 4vw;
     flex-direction: row;
-    display: flex;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 4vw;
 
 }
 
@@ -223,6 +221,26 @@ section {
     padding-top: 3rem;
     font-family: "Urbanist", sans-serif;
     box-sizing: border-box;
+}
+
+.recycle-row {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+@media (max-width: 1000px) {
+    .recycle-row {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-end;
+        gap: 0.5em;
+    }
+
+    .recycle-txt {
+        padding-left: 3vw;
+        padding-right: 3vw;
+    }
 }
 
 .about-img {
@@ -291,13 +309,15 @@ section {
 .about-title {
     font-size: clamp(1.5rem, 4vw, 3rem);
     font-family: "Urbanist", sans-serif;
-    margin-bottom: 1rem;
     font-weight: 500;
+    margin-top: 0;
+    margin-bottom: -10px;
 }
 
 .recycle-txt {
     font-size: clamp(1rem, 2vw, 1.5rem);
     text-align: left;
+    margin-top: 2rem;
     font-family: "Urbanist", sans-serif;
 }
 
@@ -312,7 +332,6 @@ section {
 .sponsors-title {
     font-size: clamp(1.5rem, 4vw, 3rem);
     font-family: "Urbanist", sans-serif;
-
     margin-bottom: 1rem;
     font-weight: 500;
     text-align: center;
@@ -448,7 +467,7 @@ section {
 }
 
 .founder-img {
-    width: 24vw;
+    width: 20vw;
     height: auto;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -478,7 +497,6 @@ section {
     padding-top: 3vw;
     padding-right: 3vw;
     padding-left: 3vw;
-    border: red solid 2px;
 }
 
 .contact-img {
@@ -488,7 +506,6 @@ section {
     border-radius: 30px;
     aspect-ratio: 1/1;
     object-fit: cover;
-    border: solid green 2px;
 }
 
 .contact-col {
